--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,8 +4,8 @@
 @import "parts/forms";
 
 body {
-  background-image: url(//21sad.ru/wp-content/themes/21sad-2/assets/images/bg4.png);
-  background-repeat: repeat;
+  // background-image: url(//path/to/);
+  // background-repeat: repeat;
   // background-attachment: fixed;
   // background-size: 100%;
   background-color: #fffffe;
@@ -34,13 +34,6 @@ body {
   }
 }
 
-#main-links-slider {
-  height: 160px;
-  .uk-card {
-    height: 124px;
-  }
-}
-
 #wp-calendar {
   width: 100%;
 }
@@ -51,29 +44,6 @@ body {
 
   a {
     font-weight: bold;
-  }
-}
-
-.zig-zag-bottom {
-  position: relative;
-  &::before {
-    position: absolute;
-    content: '';
-    left: 0;
-    bottom: -24px;
-    width: 100%;
-    height: 24px;
-    background: linear-gradient(135deg,
-           white 25%, rgba(0, 0, 0, 0) 25%), linear-gradient(225deg, white 25%,
-           rgba(0, 0, 0, 0) 25%);
-    background-position-x: 0%, 0%;
-    background-position-y: 0%, 0%;
-    background-repeat: repeat, repeat;
-    background-size: auto, auto;
-    background-position: left bottom;
-    background-repeat: repeat-x;
-    background-size: 20px 100%;
-    z-index: 100;
   }
 }
 
